# cpp

./: .gitignore  README.md  course-program.md
assignments/: README.md
assignments/final/: README.md
assignments/final/sushitsky/: CMakeLists.txt  README.md  config.json
assignments/final/sushitsky/src/: AiAgent.cpp  AiAgent.h  main.cpp
assignments/initial_setup/: README.md
assignments/lesson01/: README.md
assignments/lesson01/PelevinaViktoria/: README.md  hello.cpp
assignments/lesson01/Samorodov/: README.md
assignments/lesson01/cardenas/: README.md
assignments/lesson01/kuranova/: README.md  hello.cpp
assignments/lesson01/lutan/: README.md  helloworld.cpp
assignments/lesson01/mantsurov/: README.md
assignments/lesson01/miroshnik/: README.md
assignments/lesson01/muromtsev/: README.md
assignments/lesson01/sushitsky/: README.md
assignments/lesson01/terenteva/: README.md
assignments/lesson02/: README.md  main_02_01.cpp  main_02_02.cpp  virtual_function_example01.cpp
assignments/lesson03/: README.md
assignments/lesson04/: README.md
assignments/lesson04/Alekseev/: CMakeLists.txt
assignments/lesson04/Alekseev/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/Alekseev/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
assignments/lesson04/Alekseev/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/Maltsev/MultiModuleProject/: CMakeLists.txt
assignments/lesson04/Maltsev/MultiModuleProject/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/Maltsev/MultiModuleProject/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
assignments/lesson04/Maltsev/MultiModuleProject/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/Maystrenko/: CMakeLists.txt
assignments/lesson04/Maystrenko/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/Maystrenko/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
assignments/lesson04/Maystrenko/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/Preobrazhensky/: CMakeLists.txt
assignments/lesson04/Preobrazhensky/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/Preobrazhensky/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
assignments/lesson04/Preobrazhensky/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/ai_agent_example/: CMakeLists.txt  README.md  config.json  prompt.json
assignments/lesson04/ai_agent_example/src/: AiAgent.cpp  AiAgent.h  main.cpp
assignments/lesson04/akopyan/: CMakeLists.txt
assignments/lesson04/akopyan/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/cardenas/: .gitignore  README.md  config_example.json
assignments/lesson04/cmake_example/: CMakeLists.txt  main.cpp
assignments/lesson04/cmake_example_json/: CMakeLIsts.txt  main.cpp
assignments/lesson04/cmake_example_module_A_B/: CMakeLists.txt  main.cpp
assignments/lesson04/cmake_example_module_A_B/ModuleA/: CMakeLists.txt  ModuleA.cpp  ModuleA.h
assignments/lesson04/cmake_example_module_A_B/ModuleB/: CMakeLists.txt  ModuleB.cpp  ModuleB.h
assignments/lesson04/demina/MultiModuleProject/: CMakeLists.txt
assignments/lesson04/demina/MultiModuleProject/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/demina/MultiModuleProject/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
assignments/lesson04/demina/MultiModuleProject/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/frolova/MultiModuleProject/: CMakeLists.txt
assignments/lesson04/frolova/MultiModuleProject/MainApp/: CMakeLists.txt  main.cpp
assignments/lesson04/frolova/MultiModuleProject/MathFunctions/: MathFunctions.cpp  MathFunctions.h
assignments/lesson04/frolova/MultiModuleProject/StringUtilities/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h
assignments/lesson04/gorina/: CMakeLists.txt
assignments/lesson04/kuranova/: CMakeLists.txt  README.md  config.json  prompt.json  text.json
assignments/lesson04/kuranova/src/: AiAgent.cpp  main.cpp
assignments/lesson04/mantsurov/: .gitignore
assignments/lesson04/mantsurov/ai_agent_example/: CMakeLists.txt  README.md  config.json  prompt.json
assignments/lesson04/mantsurov/ai_agent_example/src/: AiAgent.cpp  AiAgent.hpp  MyMethods.cpp  main.cpp
assignments/lesson04/mikhaylov/: CMakeLists.txt  README.md  config.json  prompt.json
assignments/lesson04/muromtsev/: CMakeLists.txt  README.md  build.sh  config.json  rebuild.sh  run.sh
assignments/lesson04/samorodov/: README.md  config.json
assignments/lesson04/semenov/: CMakeLists.txt
assignments/lesson04/sushitsky/: CMakeLists.txt  README.md  config.json  start_local_server.sh
assignments/lesson04/sushitsky/examples/: sample.txt
assignments/lesson04/sushitsky/src/: AiAgent.cpp  AiAgent.h  examples_sample.txt
assignments/lesson04/terenteva/: CMakeLists.txt  README.md  config.json  prompt.json  yandex_music_client.py
assignments/lesson04/terenteva/src/: AiAgent.cpp  AiAgent.h  MusicAgent.cpp  MusicAgent.h  TrackInfo.h  main.cpp
assignments/lesson05/: PROMPT.md  README.md
assignments/lesson06/: Идеи АИ агентов.md  Интеграция_ИИ_список_агентов.md
assignments/lesson07/: README.md
assignments/lesson09/: README.md  example01.py
assignments/lesson10/snake-ncurses-example/: README.md
assignments/snake/: main.cpp  mainCom.cpp  mainComm.cpp
assignments/snake/Alekseev/: Makefile  main.cpp
assignments/snake/Maltsev/: Makefile  main.cpp
assignments/snake/Maystrenko/: snake.cpp
assignments/snake/Preobrazhensky/: README.md  mysnake.cpp
assignments/snake/agadzhanyan/: main.cpp  snake
assignments/snake/akopyan/: snake.cpp
assignments/snake/demina/: Makefile  snake.cpp
assignments/snake/frolova/: README.md  main.cpp
assignments/snake/gorina/: Makefile  README.md  main.cpp
assignments/snake/rudchenko/: Makefile  main.cpp
assignments/snake/semenov/: Makefile.txt
topics/: README.md
(+71 files in other folders)
